kubernetes/apps/external-secrets/bitwarden/app/networkpolicy.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-cli
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  # 1. Allow External Secrets to pull secrets from this pod
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name:
              external-secrets
              # toPorts:
              #   - ports:
              #       - port: "8087"
              #         protocol: TCP
  egress:
    - toEntities:
        - world
      # - toCIDRSet:
      #     - cidr: 10.10.30.0/24
      #     - cidr: 10.96.0.0/16
      #     - cidr: 192.168.1.0/24
      #     - cidr: 169.254.0.0/16
      # 2. Allow DNS lookups (Fixes EAI_AGAIN)
      # This targets the CoreDNS pods in kube-system
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
      # 3. Allow HTTPS traffic to Bitwarden API (Fixes FetchError)
    - toFQDNs:
        - matchName: vw.cloudjur.com
        - matchPattern: "*.bitwarden.com"
